# CMakeList.txt: Client_CMake_v2 için CMake projesi, kaynağı ekleyin ve tanımlayın
# projeye özgü mantık burada bulunur.
#
cmake_minimum_required (VERSION 3.8)

# Kaynağı bu projenin yürütülebilir dosyasına ekleyin.
add_executable (Client_CMake_v2 "Client_CMake_v2.cpp" )

# TODO: Gerekirse testleri ve yükleme hedeflerini ekleyin.
