# CMakeList.txt: Server_CMake_v2 için CMake projesi, kaynağı ekleyin ve tanımlayın
# projeye özgü mantık burada bulunur.
#
cmake_minimum_required (VERSION 3.8)

# Kaynağı bu projenin yürütülebilir dosyasına ekleyin.
add_executable (Server_CMake_v2 "Server_CMake_v2.cpp" )

# TODO: Gerekirse testleri ve yükleme hedeflerini ekleyin.
